# python-ps-gsuite-sync

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
ps_gsuite_sync/: console.py
tests/: test_ps_gsuite_sync.py
