[tool.poetry]
name = "ps-gsuite-sync"
version = "0.1.0"
description = "Utilities for syncing student accounts from PowerSchool-SIS to G Suite"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/spottybones/python-ps-gsuite-sync"
repository = "https://github.com/spottybones/python-ps-gsuite-sync"
keywords = ["powerschool", "gsuite", "g-suite"]
authors = ["Scott Burns <sburns@centercitypcs.org>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.5"

[tool.poetry.scripts]
ps-gsuite-sync = "ps_gsuite_sync.console:main"

[tool.coverage.paths]
source = ["ps_gsuite_sync", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ps_gsuite_sync"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
