[project]
name = "ps-gsuite-sync"
version = "0.1.0"
description = "Utilities for syncing student accounts from PowerSchool-SIS to G Suite"
license = {text = "MIT"}
readme = "README.md"
keywords = ["powerschool", "gsuite", "g-suite"]
authors = [{name="Scott Burns", email="sburns@centercitypcs.org"}]

requires-python = ">=3.10"
dependencies = [
  "click>=8.0"
]

[project.optional-dependencies]
minimal = [
  "click>=8.0"
]

test = [
  "pytest-mock",
  "pytest-cov",
  "coverage",
  "pytest",
  "safety",
  "black",
  "flake8",
  "flake8-bandit",
  "flake8-black",
  "flake8-bugbear",
  "flake8-import-order"
]

[project.scripts]
ps-gsuite-sync = "ps_gsuite_sync.console:main"

[project.urls]
homepage = "https://github.com/spottybones/python-ps-gsuite-sync"
repository = "https://github.com/spottybones/python-ps-gsuite-sync"

[tool.coverage.paths]
source = ["ps_gsuite_sync", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["ps_gsuite_sync"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
